--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img src="./img/logo.jpg" alt="" width="30" height="24">
+              <img src="logo.jpg" alt="" width="30" height="24">
             </a>
           
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,12 +95,12 @@
                 at <a href="https://mjcollege.ac.in/">MJCET</a>.so far i am good at my acadamics,done some cources in field and other as well..</p>
             </div>
           </div>
-          <div class="col-md-4 offset-md-0 "> <img src="./img/me.png" class="img-fluid rounded-circle" alt="..."></div>
+          <div class="col-md-4 offset-md-0 "> <img src="me.png" class="img-fluid rounded-circle" alt="..."></div>
         </div>
         <hr>
         <div class="row">
           <div class="col-md-4 offset-md-1">
-            <img src="./img/qus1.jfif" class="img-fluid rounded-circle" alt="...">
+            <img src="qus1.jfif" class="img-fluid rounded-circle" alt="...">
           </div>
           <div class="col-md-6 offset-md-0">
             <div class="card-body">
@@ -116,14 +116,14 @@
       <div class="container2" style="text-align: center;">
        <div class="row">
         <div class="col">
-          <img class="aca" src="./img/download.jfif">
+          <img class="aca" src="download.jfif">
             <h5>Academics</h5>
             <p>
                 You can know my acadamic results in my carear so far. To know more check out my resume in main menu.
            </p>
         </div>
         <div class="col">
-          <img class="aca" src="./img/download (1).jfif">
+          <img class="aca" src="download (1).jfif">
             <h5>Cretificates</h5>
             <p>
                You can see some Cretificate of my corses by organizations like corsera,intershala,udemy.
@@ -132,7 +132,7 @@
            <a href="#.html" style="color: darkgoldenrod;text-decoration: none;" >see Cretificates</a>
         </div>
         <div class="col">
-          <img class="aca" src="./img/project.jfif">
+          <img class="aca" src="project.jfif">
           <h5>Projects</h5>
           <p>
               Some of my projects which are done by me in group and individual.projects are of academics and non academics.To see my projects click on "My projects"
