--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </ul>
       </div>
       <div class="col">
-        <img src="./img/cont.jfif">
+        <img src="cont.jfif">
       </div>
     </div>
   </div>
